dataset1235/2025-2/610742602/users/1126757059/executions/677928262_2383239197.log
== SUBMISSION (2025-08-28 21:02:02)
-- CODE: 
a= float(input("qual a distância entre você a primeira árvore?: "))
b= float(input("qual a distãncia entre você e  segunda árvore?: "))
c= float(input("qual o ângulo entre a e b em graus?: "))

import  math
              
ang=math.radians(c)
              
cs=math.cos(ang)
              
f=(a**2+b**2-2*a*b*cs)**0.5
              
print(round(f,2))
              
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
qual a distância entre você a primeira árvore?: qual a distãncia entre você e  segunda árvore?: qual o ângulo entre a e b em graus?: 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
qual a distância entre você a primeira árvore?: qual a distãncia entre você e  segunda árvore?: qual o ângulo entre a e b em graus?: 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
qual a distância entre você a primeira árvore?: qual a distãncia entre você e  segunda árvore?: qual o ângulo entre a e b em graus?: 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
qual a distância entre você a primeira árvore?: qual a distãncia entre você e  segunda árvore?: qual o ângulo entre a e b em graus?: 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
qual a distância entre você a primeira árvore?: qual a distãncia entre você e  segunda árvore?: qual o ângulo entre a e b em graus?: 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
qual a distância entre você a primeira árvore?: qual a distãncia entre você e  segunda árvore?: qual o ângulo entre a e b em graus?: 9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 21:00:55)
-- CODE: 
a= float(input("qual a distância entre você a primeira árvore?: ))
b= float(input("qual a distãncia entre você e  segunda árvore?: "))
c= float(input("qual o ângulo entre a e b em graus?: "))

import  math
              
ang=math.radians(c)
              
cs=math.cos(ang)
              
f=(a**2+b**2-2*a*b*cs)**0.5
              
print(round(f,2))
              
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    a= float(input("qual a distância entre você a primeira árvore?: ))
                   ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    a= float(input("qual a distância entre você a primeira árvore?: ))
                   ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    a= float(input("qual a distância entre você a primeira árvore?: ))
                   ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    a= float(input("qual a distância entre você a primeira árvore?: ))
                   ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    a= float(input("qual a distância entre você a primeira árvore?: ))
                   ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    a= float(input("qual a distância entre você a primeira árvore?: ))
                   ^
SyntaxError: unterminated string literal (detected at line 1)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:57:11)
-- CODE: 
a=float(input("qual a distancia entre voce e a primeira arvore: ))
b=float(input("qual a distancia entre voce e  segunda arvore: "))
c=float(input("qual o angulo entre a e b em graus: "))

import math
ang=math.radians(c)
cs=math.cos(ang)
f= (a**2+b**2-2*a*b*cs)**0.5
print(round(f,2))
              
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    a=float(input("qual a distancia entre voce e a primeira arvore: ))
                  ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    a=float(input("qual a distancia entre voce e a primeira arvore: ))
                  ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    a=float(input("qual a distancia entre voce e a primeira arvore: ))
                  ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    a=float(input("qual a distancia entre voce e a primeira arvore: ))
                  ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    a=float(input("qual a distancia entre voce e a primeira arvore: ))
                  ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    a=float(input("qual a distancia entre voce e a primeira arvore: ))
                  ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:00:54)
-- CODE: 
a= float(input("qual a distância entre você a primeira árvore?: ))
b= float(input("qual a distãncia entre você e  segunda árvore?: "))
c= float(input("qual o ângulo entre a e b em graus?: "))

import  math
              
ang=math.radians(c)
              
cs=math.cos(ang)
              
f=(a**2+b**2-2*a*b*cs)**0.5
              
print(round(f,2))
              
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    a= float(input("qual a distância entre você a primeira árvore?: ))
                   ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    a= float(input("qual a distância entre você a primeira árvore?: ))
                   ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    a= float(input("qual a distância entre você a primeira árvore?: ))
                   ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    a= float(input("qual a distância entre você a primeira árvore?: ))
                   ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    a= float(input("qual a distância entre você a primeira árvore?: ))
                   ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    a= float(input("qual a distância entre você a primeira árvore?: ))
                   ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:01:41)
-- CODE: 
a= float(input("qual a distância entre você a primeira árvore?: "))
b= float(input("qual a distãncia entre você e  segunda árvore?: "))
c= float(input("qual o ângulo entre a e b em graus?: "))

import  math
              
ang=math.radians(c)
              
cs=math.cos(ang)
              
f=(a**2+b**2-2*a*b*cs)**0.5
              
print(round(f,2))
              
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
qual a distância entre você a primeira árvore?: qual a distãncia entre você e  segunda árvore?: qual o ângulo entre a e b em graus?: 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
qual a distância entre você a primeira árvore?: qual a distãncia entre você e  segunda árvore?: qual o ângulo entre a e b em graus?: 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
qual a distância entre você a primeira árvore?: qual a distãncia entre você e  segunda árvore?: qual o ângulo entre a e b em graus?: 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
qual a distância entre você a primeira árvore?: qual a distãncia entre você e  segunda árvore?: qual o ângulo entre a e b em graus?: 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
qual a distância entre você a primeira árvore?: qual a distãncia entre você e  segunda árvore?: qual o ângulo entre a e b em graus?: 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
qual a distância entre você a primeira árvore?: qual a distãncia entre você e  segunda árvore?: qual o ângulo entre a e b em graus?: 9.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:01:00)
-- CODE: 
a= float(input("qual a distância entre você a primeira árvore?: ))
b= float(input("qual a distãncia entre você e  segunda árvore?: "))
c= float(input("qual o ângulo entre a e b em graus?: "))

import  math
              
ang=math.radians(c)
              
cs=math.cos(ang)
              
f=(a**2+b**2-2*a*b*cs)**0.5
              
print(round(f,2))
              
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    a= float(input("qual a distância entre você a primeira árvore?: ))
                   ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    a= float(input("qual a distância entre você a primeira árvore?: ))
                   ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    a= float(input("qual a distância entre você a primeira árvore?: ))
                   ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    a= float(input("qual a distância entre você a primeira árvore?: ))
                   ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    a= float(input("qual a distância entre você a primeira árvore?: ))
                   ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    a= float(input("qual a distância entre você a primeira árvore?: ))
                   ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
